
Revision history for {{$dist->name}}

{{$NEXT}}

1.001     2022-11-11 09:42:07+08:00 Asia/Singapore
    [Bugs fixed]
    - Latest Future (and Future::XS) were failing tests due to `Future->needs_all`
    being a class method, the test was incorrectly trying to use it as a plain function
    (only affects the memory transport, not Redis)

1.000     2022-09-05 10:25:25+08:00 Asia/Singapore
    [API changes]
    - The --service_name parameter has been dropped, since it makes no sense when
    used with multiple services or instances

    [New features]
    - Thanks to Syntax::Keyword::Equ, match() now supports `equ` as an operator
    - RPC on start handle existing pending messages in stream, if not expired.
    - RPC overflow protection (will not connsume more than it can process).
    - Transport Redis connection pool count and wait time can be controlled through config parameters.
    - Add orderedset data structure to Myriad storage.

    [Bugs fixed]
    - Subscriptions to create streams from source without a published event.

    [Dependencies]
    - Object::Pad - updated to v0.55 for various bugfixes and improvements

0.010     2021-07-22 07:14:15+00:00 UTC
    [New features]
    - Metrics adapter type is now configurable using --metrics_adapter.
    - Metrics destination can be changed using --metrics_host and --metrics_port.

    [Bugs fixed]
    - RPC client to track message id for response before sending it.
    - Subscription to use the right group name to acknowledge from stream.

    [Dependencies]
    - Object::Pad - use new ->begin_class from MOB package.
    - Metrics::Any - update to v0.07 to disable metrics from certain packages.
    - Metrics::Any::Adapter::Statsd - instead of DogStatsd standard.

0.009     2021-07-14 18:39:34+08:00 Asia/Kuala_Lumpur
    [API Changes]
    - Syntax::Keyword::Match is now imported in Myriad::Service code
    - Redis: A service will not create another service's stream.