@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.028.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.029.
 use strict;
 use warnings;
 
@@ -27,7 +27,7 @@ my %WriteMakefileArgs = (
     "Config::Any" => "0.32",
     "Devel::MAT::Dumper" => 0,
     "Future" => "0.49",
-    "Future::AsyncAwait" => "0.59",
+    "Future::AsyncAwait" => "0.61",
     "Future::IO" => "0.11",
     "Future::Queue" => 0,
     "Getopt::Long" => 0,
@@ -61,14 +61,14 @@ my %WriteMakefileArgs = (
     "Ryu::Async" => "0.020",
     "Scope::Guard" => 0,
     "Syntax::Keyword::Defer" => "0.07",
-    "Syntax::Keyword::Dynamically" => "0.10",
+    "Syntax::Keyword::Dynamically" => "0.11",
     "Syntax::Keyword::Match" => "0.09",
     "Syntax::Keyword::Try" => "0.27",
     "Syntax::Operator::Equ" => "0.04",
     "Sys::Hostname" => 0,
     "Time::Moment" => "0.44",
     "Unicode::UTF8" => 0,
-    "XS::Parse::Keyword" => "0.27",
+    "XS::Parse::Keyword" => "0.28",
     "XS::Parse::Sublike" => "0.16",
     "YAML::XS" => "0.85",
     "bareword::filehandles" => 0,
@@ -108,7 +108,7 @@ my %FallbackPrereqs = (
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
   "Future" => "0.49",
-  "Future::AsyncAwait" => "0.59",
+  "Future::AsyncAwait" => "0.61",
   "Future::IO" => "0.11",
   "Future::Queue" => 0,
   "Getopt::Long" => 0,
@@ -146,7 +146,7 @@ my %FallbackPrereqs = (
   "Ryu::Async" => "0.020",
   "Scope::Guard" => 0,
   "Syntax::Keyword::Defer" => "0.07",
-  "Syntax::Keyword::Dynamically" => "0.10",
+  "Syntax::Keyword::Dynamically" => "0.11",
   "Syntax::Keyword::Match" => "0.09",
   "Syntax::Keyword::Try" => "0.27",
   "Syntax::Operator::Equ" => "0.04",
@@ -161,7 +161,7 @@ my %FallbackPrereqs = (
   "Test::NoTabs" => 0,
   "Time::Moment" => "0.44",
   "Unicode::UTF8" => 0,
-  "XS::Parse::Keyword" => "0.27",
+  "XS::Parse::Keyword" => "0.28",
   "XS::Parse::Sublike" => "0.16",
   "YAML::XS" => "0.85",
   "bareword::filehandles" => 0,
