@@ -3,15 +3,15 @@ requires 'mro';
 requires 'indirect';
 requires 'multidimensional';
 requires 'bareword::filehandles';
-requires 'XS::Parse::Keyword', '>= 0.27';
-requires 'Syntax::Keyword::Dynamically', '>= 0.10';
+requires 'XS::Parse::Keyword', '>= 0.28';
+requires 'Syntax::Keyword::Dynamically', '>= 0.11';
 requires 'Syntax::Keyword::Try', '>= 0.27';
 requires 'Syntax::Keyword::Defer', '>= 0.07';
 requires 'Syntax::Keyword::Match', '>= 0.09';
 requires 'Syntax::Operator::Equ', '>= 0.04';
 requires 'Future', '>= 0.49';
 requires 'Future::Queue';
-requires 'Future::AsyncAwait', '>= 0.59';
+requires 'Future::AsyncAwait', '>= 0.61';
 requires 'Future::IO', '>= 0.11';
 requires 'XS::Parse::Sublike', '>= 0.16';
 requires 'Object::Pad', '>= 0.71';
